--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,14 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family:
+    -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
 html {
@@ -28,17 +27,17 @@ html {
 }
 
 button {
-  border: none;
-  border-radius: 0;
+  width: auto;
+  padding: 0;
 
   margin: 0;
-  padding: 0;
-  width: auto;
-  background: none;
-  appearance: none;
-
-  color: inherit;
   font: inherit;
   line-height: normal;
+
+  color: inherit;
+  appearance: none;
   cursor: pointer;
+  background: none;
+  border: none;
+  border-radius: 0;
 }
