--- a/src/index.css
+++ b/src/index.css
@@ -1,43 +1,6 @@
-body {
-  margin: 0;
-  font-family:
-    -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-    "Helvetica Neue", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
-}
-
-html {
-  box-sizing: border-box;
-}
-
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
-}
+@import "tailwindcss";
 
 :root {
   --footer-height: 60px;
   --logo-height: 8rem;
-}
-
-button {
-  width: auto;
-  padding: 0;
-
-  margin: 0;
-  font: inherit;
-  line-height: normal;
-
-  color: inherit;
-  appearance: none;
-  cursor: pointer;
-  background: none;
-  border: none;
-  border-radius: 0;
 }
